# ComputerVisionAppCPP2

./: CMakeLists.txt  main.cpp
Programs/: .json  Bartek.json  Klaudia.json  mysia.json  ok1234.json
Programs23/: jp12.json
gui/: MainWindow.h  ROISelector.cpp  ROISelector.h  editview.cpp  editview.h  editview.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui_old/: EditWindow.cpp  EditWindow.h  MainWindow.cpp  MainWindow.h
imageProcessing/: CameraWorker.cpp  CameraWorker.h  ImageCapture.cpp  ImageCapture.h  MainProcessing.cpp  MainProcessing.h
tools/: ProgramManager.cpp  ProgramManager.h
